syntax = "proto3";

// 命 令 号: 1003
// 命令名称: led_belt_brightness_set
// 命令描述: 灯带亮度设置
// 文件名称: d1ac1003_led_belt_brightness_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbLedBeltBrightnessSet";

message LedBeltBrightnessSetRequest {
  // ATTR: REQUSET
  message info {
    uint32 brightness = 1;
    uint32 port = 2;
  }
  repeated info brightness=1;
}

message LedBeltBrightnessSetResponse {

}
