syntax = "proto3";

// 命 令 号: 1001
// 命令名称: led_expressions_set
// 命令描述: 灯光模块表情帧控制
// 文件名称: d8c1001_led_exp_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbLedExpressionsSet";

message LedExpressionsSetRequest {
  // ATTR: REQUSET
  uint32 time = 1;   //显示时间，单位s
  message dev_color_lump
  {
    uint32 index=1;
    uint32 rgbc=2; //色块rgbc值
  }
  repeated dev_color_lump color_lump=2;
}

message LedExpressionsSetResponse {

}
